--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         transform: scale(1.5);
       }
     </style>
-    <title>Codegen</title>
+    <title>CodeGenie</title>
   </head>
   <body>
     <div id="root"></div>
